; ModuleID = '/home/carl/AnghaBench/linux/fs/ocfs2/cluster/extr_masklog.c_mlog_sys_init.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ocfs2/cluster/extr_masklog.c_mlog_sys_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i64 }
%struct.TYPE_6__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { %struct.kset* }
%struct.kset = type { i32 }

@mlog_attrs = common dso_local global %struct.TYPE_7__* null, align 8
@mlog_attr_ptrs = common dso_local global %struct.TYPE_8__** null, align 8
@mlog_kset = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@.str = private unnamed_addr constant [8 x i8] c"logmask\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlog_sys_init(%struct.kset* %0) #0 {
  %2 = alloca %struct.kset*, align 8
  %3 = alloca i32, align 4
  store %struct.kset* %0, %struct.kset** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %13, %1
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** @mlog_attrs, align 8
  %6 = load i32, i32* %3, align 4
  %7 = sext i32 %6 to i64
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i64 %7
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %25

13:                                               ; preds = %4
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** @mlog_attrs, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i64 %16
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 0
  %19 = load %struct.TYPE_8__**, %struct.TYPE_8__*** @mlog_attr_ptrs, align 8
  %20 = load i32, i32* %3, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.TYPE_8__*, %struct.TYPE_8__** %19, i64 %21
  store %struct.TYPE_8__* %18, %struct.TYPE_8__** %22, align 8
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %3, align 4
  br label %4

25:                                               ; preds = %4
  %26 = load %struct.TYPE_8__**, %struct.TYPE_8__*** @mlog_attr_ptrs, align 8
  %27 = load i32, i32* %3, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds %struct.TYPE_8__*, %struct.TYPE_8__** %26, i64 %28
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %29, align 8
  %30 = call i32 @kobject_set_name(%struct.TYPE_9__* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @mlog_kset, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %31 = load %struct.kset*, %struct.kset** %2, align 8
  store %struct.kset* %31, %struct.kset** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @mlog_kset, i32 0, i32 0, i32 0), align 8
  %32 = call i32 @kset_register(%struct.TYPE_6__* @mlog_kset)
  ret i32 %32
}

declare dso_local i32 @kobject_set_name(%struct.TYPE_9__*, i8*) #1

declare dso_local i32 @kset_register(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
